--- a/app/src/main/res/layout/fragment_discover_result.xml
+++ b/app/src/main/res/layout/fragment_discover_result.xml
@@ -29,10 +29,9 @@
                 app:titleTextColor="@color/alabaster" />
 
             <!-- Add your fragment's content here -->
-            <com.indisparte.recyclerviewemptystatesupport.RecyclerViewEmptyStateSupport
+            <com.indisparte.ui.custom_view.EmptyStateRecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                app:emptyTextSize="18sp"
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
