--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -77,13 +77,11 @@
             android:text="TV Show" />
     </com.google.android.material.chip.ChipGroup>
 
-    <com.indisparte.recyclerviewemptystatesupport.RecyclerViewEmptyStateSupport
+    <com.indisparte.ui.custom_view.EmptyStateRecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:emptyText="Nothing here!"
-        app:emptyTextColor="@color/alabaster"
-        app:icon="@drawable/ic_space"
+        app:emptyStateTitle="Nothing here!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
