--- a/app/src/main/res/layout/list_item_poster.xml
+++ b/app/src/main/res/layout/list_item_poster.xml
@@ -14,7 +14,7 @@
 
     </data>
 
-    <com.indisparte.posterview.PosterView
+    <com.indisparte.ui.custom_view.PosterView
         android:layout_width="100dp"
         android:layout_height="150dp"
         android:layout_marginEnd="10dp"
