--- a/core/ui/src/main/res/layout/layout_rating_chip.xml
+++ b/core/ui/src/main/res/layout/layout_rating_chip.xml
@@ -10,7 +10,7 @@
     android:layout_marginEnd="8dp"
     android:elevation="4dp"
     app:cardCornerRadius="8dp"
-    tools:showIn="@layout/layout_poster_view">
+    tools:showIn="@layout/poster_view">
 
     <RelativeLayout
         android:layout_width="wrap_content"
