--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="grey">#BDBDBD</color>
+    <color name="grey_50_alpha">#C7CBD8</color>
     <color name="white">#FFFFFF</color>
 
 
