fix: clickable response of view

--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!--    Android palette-->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
@@ -32,9 +32,7 @@
     <color name="fern_frond_70">#B3487B1E</color>
 
 
-
-<!--    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/ratatouille_on_primary</color>-->
-
+    <!--    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/ratatouille_on_primary</color>-->
 
 
 </resources>
