--- a/core/ui/src/main/res/layout/poster_view.xml
+++ b/core/ui/src/main/res/layout/poster_view.xml
@@ -24,8 +24,8 @@
             style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/base_margin"
-            android:layout_marginEnd="@dimen/base_margin"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/posterImageView"
