--- a/feature/movie_details/src/main/res/layout/fragment_media_details.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_media_details.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="media"
-            type="com.indisparte.model.entity.Media" />
+            type="com.indisparte.model.entity.MovieDetails" />
 
         <import type="android.view.View" />
     </data>
@@ -38,17 +38,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <!--<com.indisparte.ui.custom_view.PosterView
-                        android:id="@+id/media_poster"
-                        android:layout_width="100dp"
-                        android:layout_height="150dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="120dp"
-                        app:imageSrc="@{media.completePosterPathW780}"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />-->
-
-
                     <ImageView
                         android:id="@+id/media_backdrop"
                         android:layout_width="match_parent"
@@ -57,20 +46,21 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:loadImage="@{media.completePosterPathW780}"
+                        app:loadImage="@{media.completeBackdropPathW780}"
                         tools:src="@tools:sample/backgrounds/scenic" />
 
-                    <ImageView
+                    <com.indisparte.ui.custom_view.PosterView
                         android:id="@+id/media_poster"
-                        android:layout_width="100dp"
-                        android:layout_height="150dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="120dp"
                         android:scaleType="centerCrop"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:loadImage="@{media.completePosterPathW780}"
-                        tools:src="@tools:sample/backgrounds/scenic" />
+                        app:pv_imageUrl="@{media.completePosterPathW780}"
+                        app:pv_posterHeight="150dp"
+                        app:pv_posterWidth="100dp" />
 
                     <TextView
                         android:id="@+id/media_title"
@@ -79,11 +69,13 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="20dp"
                         android:maxLines="2"
-                        android:text="@{media.mediaName}"
+                        android:ellipsize="end"
+                        android:text="@{media.title}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/media_poster"
                         app:layout_constraintTop_toBottomOf="@+id/media_backdrop"
                         tools:text="Media title" />
+
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/watch_providers"
