--- a/feature/movie_details/src/main/res/layout/list_item_yt_video.xml
+++ b/feature/movie_details/src/main/res/layout/list_item_yt_video.xml
@@ -1,56 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
     </data>
 
-    <RelativeLayout
-        android:layout_width="220dp"
+    <com.indisparte.ui.custom_view.PosterView
+        android:id="@+id/video_thumbnail"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/video_thumbnail"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            app:cardCornerRadius="10dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/thumbnailView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    tools:src="@tools:sample/backgrounds/scenic" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/round_corner_transparent_bg"
-                    android:padding="10dp"
-                    android:textColor="@color/alabaster"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    tools:text="Official" />
-
-            </RelativeLayout>
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/video_thumbnail"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/alabaster"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            tools:text="@tools:sample/full_names" />
-    </RelativeLayout>
+        app:pv_posterHeight="120dp"
+        android:layout_marginEnd="10dp"
+        app:pv_posterWidth="220dp" />
 </layout>
