--- a/core/ui/src/main/res/values/attrs.xml
+++ b/core/ui/src/main/res/values/attrs.xml
@@ -16,7 +16,7 @@
         <attr name="pv_title" format="string" />
         <attr name="pv_title_size" format="dimension"/>
         <attr name="pv_title_color" format="color"/>
-        <attr name="pv_chipValue" format="float" />
+        <attr name="pv_chipValue" format="string" />
         <attr name="pv_imageUrl" format="string" />
         <attr name="pv_cornerRadius" format="dimension" />
         <attr name="pv_posterWidth" format="dimension" />
