--- a/feature/home/src/main/res/layout/list_item_media_small.xml
+++ b/feature/home/src/main/res/layout/list_item_media_small.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        app:pv_chipValue="@{media.voteAverage}"
+        app:pv_chipValue="@{media.voteAverageRounded}"
         app:pv_imageUrl="@{media.completePosterPathW780}"
         app:pv_posterHeight="170dp"
         app:pv_title="@{media.mediaName}"
