--- a/feature/movie_details/src/main/res/layout/layout_movie_info.xml
+++ b/feature/movie_details/src/main/res/layout/layout_movie_info.xml
@@ -37,6 +37,18 @@
             app:value="@{movie.originalTitle}" />
 
         <com.indisparte.ui.custom_view.LinearLayoutInfoView
+            android:id="@+id/tagline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal"
+            app:hideIfValueEmpty="true"
+            app:textColor="@color/geyser"
+            app:textSize="14sp"
+            app:title="Tagline"
+            app:value="@{movie.tagline}" />
+
+        <com.indisparte.ui.custom_view.LinearLayoutInfoView
             android:id="@+id/status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
