--- a/app/src/main/res/layout/fragment_tv_about.xml
+++ b/app/src/main/res/layout/fragment_tv_about.xml
@@ -37,7 +37,7 @@
                 tools:text="@tools:sample/lorem" />
 
 
-            <com.indisparte.ui.custom_view.HorizontalChipView
+           <!-- <com.indisparte.ui.custom_view.HorizontalChipView
                 android:id="@+id/chipGroupGenres"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -48,14 +48,14 @@
                 app:title="Genres"
                 app:titleColor="@color/alabaster"
                 app:titleSize="18sp"
-                app:titleStyle="bold" />
+                app:titleStyle="bold" />-->
 
             <include
                 android:id="@+id/tv_info"
                 layout="@layout/layout_tv_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/chipGroupGenres"
+                android:layout_below="@id/readMoreTextV"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="10dp"
                 app:tv="@{tv}" />
