--- a/app/src/main/res/layout/layout_filter_dialog.xml
+++ b/app/src/main/res/layout/layout_filter_dialog.xml
@@ -47,7 +47,7 @@
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
     <!-- Sort By section -->
-    <com.indisparte.ui.custom_view.HorizontalChipView
+    <!--<com.indisparte.ui.custom_view.HorizontalChipView
         android:id="@+id/sort_by"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
         app:titleColor="@color/alabaster"
         app:titleSize="18sp" />
 
-    <!-- Genres section -->
+    &lt;!&ndash; Genres section &ndash;&gt;
     <com.indisparte.ui.custom_view.HorizontalChipView
         android:id="@+id/genres"
         android:layout_width="match_parent"
@@ -66,7 +66,7 @@
         app:chipStyle="@style/CustomFilterChipStyle"
         app:title="Genres"
         app:titleColor="@color/alabaster"
-        app:titleSize="18sp" />
+        app:titleSize="18sp" />-->
 
     <!-- Year section -->
     <TextView
