--- a/feature/movie_details/src/main/res/layout/fragment_movie_about.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_movie_about.xml
@@ -40,25 +40,39 @@
                 app:readMoreText="Read more"
                 tools:text="@tools:sample/lorem" />
 
-            <com.indisparte.ui.custom_view.HorizontalChipView
-                android:id="@+id/chiGroupGenres"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/genres_title"
+                style="@style/HugeTitleTextViewStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/readMoreTextV"
-                android:padding="10dp"
-                app:chipStyle="@style/CustomChipChoiceStyle"
-                app:singleCheck="true"
-                app:title="Genres"
-                app:titleColor="@color/alabaster"
-                app:titleSize="18sp"
-                app:titleStyle="bold" />
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:text="Genres"
+                android:visibility="@{movie.genres.empty?View.GONE:View.VISIBLE}" />
+
+            <HorizontalScrollView
+                android:id="@+id/horizontal_scroll_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/genres_title"
+                android:visibility="@{movie.genres.empty?View.GONE:View.VISIBLE}">
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/genreChipGroup"
+                    style="@style/CustomFilterChipStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:singleLine="true"
+                    app:singleSelection="true" />
+            </HorizontalScrollView>
 
             <include
                 android:id="@+id/movie_info"
                 layout="@layout/layout_movie_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/chiGroupGenres"
+                android:layout_below="@id/horizontal_scroll_view"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="10dp"
                 app:movie="@{movie}" />
@@ -85,8 +99,7 @@
                 android:layout_below="@id/collection_cover"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:text="Trailers"
-                android:visibility='@{movie.video==true?View.VISIBLE:View.GONE}' />
+                android:text="Trailers" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/trailers"
@@ -96,7 +109,6 @@
                 android:clipToPadding="false"
                 android:orientation="horizontal"
                 android:paddingHorizontal="10dp"
-                android:visibility='@{movie.video==true?View.VISIBLE:View.GONE}'
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/list_item_yt_video" />
 
