feat: update movie about design

--- a/feature/movie_details/src/main/res/layout/fragment_media_details.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_media_details.xml
@@ -83,7 +83,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="20dp"
-                        android:text='@{media.formattedReleaseDate - media.formattedRuntime }'
+                        android:text='@{media.formattedReleaseDate+" - "+media.formattedRuntime }'
                         android:textColor="?attr/colorOnSecondary"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
